--- a/style/_videos.scss
+++ b/style/_videos.scss
@@ -3,40 +3,54 @@
 .videoGrid {  display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
-    gap: 0px 0px;
-    grid-auto-flow: row;
+    gap: 20px;
+    width: 100%;
+    min-height: 100vh;
     grid-template-areas:
-        "encabezado"
+        "header"
+        "hr1"
         "videoT1"
         "video1"
+        "hr2"
         "videoT2"
         "video2"
+        "hr3"
         "videoT3"
         "video3"
+        "hr4"
         "footer";
 }
-.encabezado { grid-area: encabezado; }
-.videoT1 { grid-area: videoT1; }
-.video1 { grid-area: video1; }
-.videoT2 { grid-area: videoT2; }
-.video2 { grid-area: video2; }
-.videoT3 { grid-area: videoT3; }
-.video3 { grid-area: video3; }
-.footer { grid-area: footer; }
-
-.videoT1, .videoT2, .videoT3{
+.header { grid-area: header; }
+.hr1 { grid-area: hr1; }
+.videoT1 { grid-area: videoT1; 
     font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
-    color:white;
+    font-size: clamp(1.2rem, 2vw, 3.5rem);
+    color: $naranja;
+    font-weight: bolder;
     text-align: center;
+    text-decoration: underline;
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
-
-.video1, .video2, .video3 {
+.video1 { grid-area: video1;
     display: flex;
     justify-content: center;
     margin: 20px;
+    padding-bottom: 10px;
 }
-
-.footer {
-    width: 100%;
-    align-self: center;
+.hr2 { grid-area: hr2; }
+.videoT2 { grid-area: videoT2; 
+    @extend .videoT1;
 }
+.video2 { grid-area: video2; 
+    @extend .video1;
+}
+.hr3 { grid-area: hr3; }
+.videoT3 { grid-area: videoT3; 
+    @extend .videoT1;
+}
+.video3 { grid-area: video3; 
+    @extend .video1;
+}
+.hr4 { grid-area: hr4; }
+.footer { grid-area: footer; }
