--- a/style/_global.scss
+++ b/style/_global.scss
@@ -16,8 +16,8 @@ html {
 body {
     background-color: $fondo;
     width: minmax(600px, 1000px);
-    margin: 0 auto;
-    padding: 20px;
+    margin-left: 2vw;
+    margin-right: 2vw;
     height: 100%;
 }
 
@@ -120,7 +120,7 @@ hr {
         font-size: clamp(1rem, 2vw, 4rem);
         text-decoration: none;
         display: inline-block;
-        transition: all 0.5s ease;  
+        transition: all 0.5s ease;
         &:hover {
             transform: scale(1.2);
             color: $rojo;
