--- a/style/style.css
+++ b/style/style.css
@@ -12,8 +12,8 @@ html {
 body {
   background-color: #030104;
   width: minmax(600px, 1000px);
-  margin: 0 auto;
-  padding: 20px;
+  margin-left: 2vw;
+  margin-right: 2vw;
   height: 100%;
 }
 
@@ -228,19 +228,24 @@ hr {
     max-width: 90vw;
     align-self: center;
   }
-  .texto1, .texto2 {
+  .aboutTexto1, .aboutTexto2 {
     align-items: center;
     width: 100%;
     max-height: none;
     padding: 20px;
     flex-grow: 1;
   }
-  .texto1 p, .texto2 p {
+  .aboutTexto1 p, .aboutTexto2 p {
     width: 100%;
     text-align: center;
-    font-size: clamp(1rem, 2vh, 4rem);
+    font-size: calc(0.75em + 1vmin);
     padding: 20px;
     white-space: normal;
+  }
+}
+@media (max-width: 480px) {
+  body {
+    width: 480px;
   }
 }
 /*Styling of the Program webpage*/
@@ -345,6 +350,16 @@ hr {
   align-self: center;
 }
 
+@media (max-width: 1024px) {
+  .programText p {
+    font-size: calc(0.75em + 1vmin);
+  }
+}
+@media (max-width: 480px) {
+  body {
+    width: 480px;
+  }
+}
 /*Styling of the Scotty Bio webpage*/
 .scottyGrid {
   display: grid;
@@ -353,7 +368,7 @@ hr {
   gap: 20px;
   width: 100%;
   min-height: 100vh;
-  grid-template-areas: "header" "hr1" "scottyI1" "hr2" "scottyT1" "hr3" "scottyT2" "hr4" "scottyCarousel" "hr5" "scottyT3" "hr6" "footer";
+  grid-template-areas: "header" "hr1" "scottyI1" "hr2" "scottyT1" "hr3" "scottyT2" "hr4" "carousel" "hr5" "scottyT3" "hr6" "footer";
 }
 
 .header {
@@ -388,7 +403,8 @@ hr {
   align-items: center;
   height: auto;
   width: 100%;
-  padding: 20px;
+  margin: 10px;
+  box-sizing: border-box;
 }
 .scottyT1 p, .scottyT3 p, .scottyT2 p {
   font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
@@ -413,39 +429,15 @@ hr {
   grid-area: hr4;
 }
 
-.scottyCarousel {
-  grid-area: scottyCarousel;
-}
-.scottyCarousel #carousel {
-  max-width: 70vw;
-  height: auto;
-  margin: 0 auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border: 2px solid red !important;
-}
-.scottyCarousel #carousel .carousel-inner {
-  display: flex;
-  position: relative;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid blue !important;
-}
-.scottyCarousel #carousel .carousel-inner .carousel-item {
-  border: 2px solid green !important;
-}
-.scottyCarousel #carousel .carousel-inner .carousel-item img {
-  display: block;
-  width: 100%;
-  height: auto;
-  object-fit: cover;
+.carousel {
+  grid-area: carousel;
   margin: auto;
-  transition: 2s ease;
-  border: 2px solid purple !important;
+  box-sizing: border-box;
+  padding: 25px;
 }
-.scottyCarousel #carousel .carousel-inner .carousel-item img:hover {
-  transform: scale(1.2);
+.carousel .carousel-inner .carousel-item img {
+  height: auto;
+  margin: auto;
 }
 
 .hr5 {
@@ -464,6 +456,15 @@ hr {
   justify-content: center;
   align-items: center;
 }
+.scottyT3 .scottyLink a {
+  color: #0d6efd;
+  text-decoration: none;
+  transition: all 0.5s ease;
+}
+.scottyT3 .scottyLink a:hover {
+  transform: scale(1.2);
+  color: #dc3545;
+}
 
 .hr6 {
   grid-area: hr6;
@@ -473,6 +474,16 @@ hr {
   grid-area: footer;
 }
 
+@media (max-width: 1024px) {
+  .scottyT1 p, .scottyT2 p, .scottyT3 p {
+    font-size: calc(0.75em + 1vmin);
+  }
+}
+@media (max-width: 480px) {
+  body {
+    width: 480px;
+  }
+}
 /*Styling of the Videos webpage*/
 .videoGrid {
   display: grid;
@@ -494,6 +505,8 @@ hr {
 
 .videoT1, .videoT3, .videoT2 {
   grid-area: videoT1;
+}
+.videoT1 p, .videoT3 p, .videoT2 p {
   font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
   font-size: clamp(1.2rem, 2vw, 3.5rem);
   color: #ffc107;
@@ -544,6 +557,16 @@ hr {
   grid-area: footer;
 }
 
+@media (max-width: 1024px) {
+  .videoT1 p, .videoT2 p, .videoT3 p {
+    font-size: calc(0.75em + 1vmin);
+  }
+}
+@media (max-width: 480px) {
+  body {
+    width: 480px;
+  }
+}
 /*Styling of the Main webpage*/
 .indexGrid {
   display: grid;
@@ -647,10 +670,9 @@ hr {
 }
 
 /*Media Queries - A mejorar: font sizes, page width/centering issues*/
-@media (max-width: 900px) {
+@media (max-width: 1024px) {
   body {
     width: 100%;
-    max-width: 90vw;
     align-items: center;
   }
   .indexGrid {
@@ -684,7 +706,7 @@ hr {
     font-weight: bold;
     color: #dc3545;
     font-weight: bold;
-    font-size: clamp(1.2rem, 4vw, 3.5rem);
+    font-size: calc(0.75em + 1vmin);
     text-align: center;
   }
   .mainGrid .indexTexto1 {
@@ -697,8 +719,13 @@ hr {
     width: 100%;
     padding: 5px;
     line-height: 1.5;
-    font-size: clamp(1rem, 2vw, 1.6rem);
+    font-size: calc(0.75em + 1vmin);
     margin-bottom: 10px;
+  }
+}
+@media (max-width: 480px) {
+  body {
+    width: 480px;
   }
 }
 
