--- a/style/_about.scss
+++ b/style/_about.scss
@@ -108,6 +108,7 @@
 
 @media (max-width: 480px) {
     body {
-        width: 480px;
+        box-sizing: border-box;
+        width: 100%;
     }
 }
