--- a/style/_program.scss
+++ b/style/_program.scss
@@ -107,6 +107,10 @@ $naranja2: #8f6d06;
 
 @media (max-width: 480px) {
     body {
-        width: 480px;
+        box-sizing: border-box;
+        width: 100%;
+    }
+    .table {
+        overflow-x: auto;
     }
 }
