--- a/style/_scotty.scss
+++ b/style/_scotty.scss
@@ -107,6 +107,7 @@
 
 @media (max-width: 480px) {
     body {
-        width: 480px;
+        box-sizing: border-box;
+        width: 100%;
     }
 }
