--- a/style/_videos.scss
+++ b/style/_videos.scss
@@ -24,14 +24,22 @@
 .hr1 { grid-area: hr1; }
 .videoT1 { grid-area: videoT1; 
     p {
-        font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
-        font-size: clamp(1.2rem, 2vw, 3.5rem);
-        color: $naranja;
-        font-weight: bolder;
         text-align: center;
-        text-decoration: underline;
-        margin-top: 10px;
-        margin-bottom: 30px;
+        a {
+            font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
+            font-size: clamp(1.2rem, 2vw, 3.5rem);
+            color: $naranja;
+            font-weight: bolder;
+            text-decoration: underline;
+            margin-top: 10px;
+            margin-bottom: 30px;
+            display: inline-block;
+            transition: all 1s ease;
+            &:hover {
+                color: #dc3545;
+                transform: scale(1.2);
+            }
+        }
     }
 }
 .video1 { grid-area: video1;
@@ -50,6 +58,13 @@
 .hr3 { grid-area: hr3; }
 .videoT3 { grid-area: videoT3; 
     @extend .videoT1;
+    p {
+        a {
+            span {
+                font-style: italic;
+            }
+        }
+    }
 }
 .video3 { grid-area: video3; 
     @extend .video1;
@@ -67,6 +82,7 @@
 
 @media (max-width: 480px) {
     body {
-        width: 480px;
+        box-sizing: border-box;
+        width: 100%;
     }
 }
