--- a/style/_global.scss
+++ b/style/_global.scss
@@ -2,6 +2,7 @@ $fondo: #030104;
 $rojo: #dc3545;
 $naranja: #ffc107;
 $link: #0d6efd;
+$rojo-fuerte: #e60127;
 
 * {
     margin: 0;
@@ -19,6 +20,9 @@ body {
     margin-left: 2vw;
     margin-right: 2vw;
     height: 100%;
+    .text-danger {
+        color: $rojo ;
+    }
 }
 
 .header {
@@ -46,7 +50,7 @@ body {
         font-size: clamp(2.5rem, 6vw, 8rem);
         letter-spacing: 0.05em;
         text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-        color: $rojo;
+        color: $rojo-fuerte;
         font-style: italic;
         text-align: center;
         margin-top: 2rem;
@@ -75,7 +79,7 @@ body {
                 color: #ffc107;
                 transition: all 0.5s ease;
                 &:hover {
-                    color: #dc3545;
+                    color: $rojo-fuerte;
                     transform: scale(1.2);
                 }
             }
@@ -115,6 +119,7 @@ hr {
     padding: 10px;
     text-align: center;
     margin-top: auto;
+    margin-bottom: 20px;
     a {
         color: $link;
         font-size: clamp(1rem, 2vw, 4rem);
