--- a/style/style.scss
+++ b/style/style.scss
@@ -94,7 +94,7 @@ $naranja: #ffc107;
             display: inline-block;
             transition: all 0.5s ease;
             &:hover {
-                color: #dc3545;
+                color: $rojo;
             }
         }
     }
