Corrected variables listing.-

--- a/style/style.css
+++ b/style/style.css
@@ -224,9 +224,10 @@ hr {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto auto auto auto 1fr auto 1fr auto auto;
-  gap: 20px;
-  width: 100%;
-  min-height: 100vh;
+  gap: 5px;
+  margin: 20px;
+  padding: 20px;
+  overflow-wrap: break-word;
   grid-template-areas: "header" "hr1" "aboutTitle" "hr2" "aboutFoto1" "hr3" "aboutTexto1" "hr4" "aboutTexto2" "hr5" "aboutFoto2" "hr6" "footer";
 }
 
