--- a/style/_about.scss
+++ b/style/_about.scss
@@ -3,9 +3,10 @@
 .aboutGrid {  display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto auto auto auto auto 1fr auto 1fr auto auto;
-    gap: 20px;
-    width: 100%;
-    min-height: 100vh;
+    gap: 5px;
+    margin: 20px;
+    padding: 20px;
+    overflow-wrap: break-word;
     grid-template-areas:
         "header"
         "hr1"
